--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {bson, {git, "git://github.com/bajankristof/bson.git", {branch, "main"}}}
+    {bson, {git, "git://github.com/bajankristof/bson.git", {branch, "main"}}},
+    {poolboy, "~> 1.5"}
 ]}.
 
 {shell, [
