--- a/sys.config
+++ b/sys.config
@@ -4,7 +4,7 @@
     ]},
     {mango, [
         {connections, [
-            {localhost, {local, localhost}, []}
+            {localhost, [{name, {local, localhost}}]}
         ]}
     ]}
 ].
