feat!: add database option to connections

--- a/sys.config
+++ b/sys.config
@@ -4,7 +4,10 @@
     ]},
     {mango, [
         {connections, [
-            {localhost, [{name, {local, localhost}}]}
+            {localhost, [
+                {name, {local, localhost}},
+                {database, mango}
+            ]}
         ]}
     ]}
 ].
