feat: add some test cases

--- a/rebar.config
+++ b/rebar.config
@@ -8,3 +8,10 @@
     {config, "sys.config"},
     {apps, [mango]}
 ]}.
+
+{profiles, [
+    {test, [
+        {erl_opts, [nowarn_export_all]},
+        {ct_opts, [{sys_config, "sys.config"}]}
+    ]}
+]}.
