--- a/sys.config
+++ b/sys.config
@@ -4,10 +4,15 @@
     ]},
     {mango, [
         {connections, [
-            {localhost, [
-                {name, {local, localhost}},
-                {database, mango}
-            ]}
+            {localhost, #{
+                name => {local, localhost},
+                database => mango
+            }},
+            {rs, #{
+                name => {local, rs},
+                seeds => ["mongodb-0.node.consul", "mongodb-1.node.consul", "mongodb-2.node.consul"],
+                database => shared
+            }}
         ]}
     ]}
 ].
