--- a/sys.config
+++ b/sys.config
@@ -7,11 +7,12 @@
             %{localhost, #{
             %    name => {local, localhost},
             %    database => mango
-            %}}%,
+            %}}
             %{rs, #{
             %    name => {local, rs},
             %    hosts => ["mongodb-0.node.consul", "mongodb-1.node.consul", "mongodb-2.node.consul"],
-            %    database => shared
+            %    database => shared,
+            %    read_preference => secondary_preferred
             %}}
         ]}
     ]}
