[WIP] perf: improve driver performance

--- a/sys.config
+++ b/sys.config
@@ -4,16 +4,16 @@
     ]},
     {mango, [
         {connections, [
-            %{localhost, #{
-            %    name => {local, localhost},
-            %    database => mango
-            %}}
-            %{rs, #{
-            %    name => {local, rs},
-            %    hosts => ["mongodb-0.node.consul", "mongodb-1.node.consul", "mongodb-2.node.consul"],
-            %    database => shared,
-            %    read_preference => secondary_preferred
-            %}}
+            {localhost, #{
+                name => {local, localhost},
+                database => mango
+            }},
+            {rs, #{
+                name => {local, rs},
+                hosts => ["mongodb-0.node.consul", "mongodb-1.node.consul", "mongodb-2.node.consul"],
+                database => shared,
+                read_preference => secondary_preferred
+            }}
         ]}
     ]}
 ].
