--- a/sys.config
+++ b/sys.config
@@ -6,11 +6,12 @@
         {connections, [
             {localhost, #{
                 name => {local, localhost},
+                url => "mongodb://localhost",
                 database => mango
             }},
             {rs, #{
                 name => {local, rs},
-                hosts => ["mongodb-0.node.consul", "mongodb-1.node.consul", "mongodb-2.node.consul"],
+                url => "mongodb://mongodb-0.node.consul,mongodb-1.node.consul,mongodb-2.node.consul",
                 database => shared,
                 read_preference => secondary_preferred
             }}
